@@ -1,6 +1,7 @@
 Changelog:
 
 08-12-2011:
+Syncing up some things with the dual-binaries branch.
 Minor changes to creatBootLogo.sh.
 Ignoring output file (logo_rgb24_wvga_portrait_custom.h).
 Added createBootLogo.sh script for ease of use.
